Fix gap on m-navbar

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -10245,6 +10245,12 @@ nav {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  nav {
+    width: 100.5%;
+  }
+}
+
 .brand-logo {
   margin-left: 15px;
   margin-right: 15px;
