--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9424,6 +9424,12 @@ nav {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  nav {
+    width: 100.5%;
+  }
+}
+
 .brand-logo {
   margin-left: 15px;
   margin-right: 15px;
