--- a/public/css/hda.css
+++ b/public/css/hda.css
@@ -10287,6 +10287,12 @@ nav {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  nav {
+    width: 100.5%;
+  }
+}
+
 .brand-logo {
   margin-left: 15px;
   margin-right: 15px;
