--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -9444,6 +9444,12 @@ nav {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  nav {
+    width: 100.5%;
+  }
+}
+
 .brand-logo {
   margin-left: 15px;
   margin-right: 15px;
