--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -9,6 +9,9 @@ nav{
 		padding-left: 5px;
 		padding-right: 5px;
 	}
+	@media only screen and (max-width : 360px){
+		width: 100.5%;
+	}
 }
 
 .brand-logo{
